add purple theme

--- a/src/options.html
+++ b/src/options.html
@@ -15,6 +15,7 @@
     <option disabled>──────────</option>
     <option value="material-blue">Blue</option>
     <option value="material-pink">Pink</option>
+    <option value="material-purple">Purple</option>
   </select>
 
   <br />
