add option no theme

--- a/src/options.html
+++ b/src/options.html
@@ -11,6 +11,7 @@
 <body>
   Choose color theme:
   <select id="theme">
+    <option value="none">No theme</option>
     <option value="halloween">Halloween</option>
     <option disabled>──────────</option>
     <option value="material-blue">Blue</option>
