--- a/src/options.html
+++ b/src/options.html
@@ -15,6 +15,7 @@
     <option value="halloween">Halloween</option>
     <option disabled>──────────</option>
     <option value="material-blue">Blue</option>
+    <option value="material-deep-purple">Deep Purple</option>
     <option value="material-pink">Pink</option>
     <option value="material-purple">Purple</option>
   </select>
