--- a/src/options.html
+++ b/src/options.html
@@ -16,6 +16,7 @@
     <option disabled>──────────</option>
     <option value="material-blue">Blue</option>
     <option value="material-deep-purple">Deep Purple</option>
+    <option value="material-indigo">Indigo</option>
     <option value="material-pink">Pink</option>
     <option value="material-purple">Purple</option>
   </select>
