--- a/src/options.html
+++ b/src/options.html
@@ -19,6 +19,7 @@
     <option value="material-indigo">Indigo</option>
     <option value="material-pink">Pink</option>
     <option value="material-purple">Purple</option>
+    <option value="material-red">Red</option>
   </select>
 
   <br />
