--- a/src/options.html
+++ b/src/options.html
@@ -20,6 +20,7 @@
     <option value="material-pink">Pink</option>
     <option value="material-purple">Purple</option>
     <option value="material-red">Red</option>
+    <option value="material-teal">Teal</option>
   </select>
 
   <br />
