--- a/src/options.html
+++ b/src/options.html
@@ -18,6 +18,7 @@
     <option value="material-cyan">Cyan</option>
     <option value="material-deep-purple">Deep Purple</option>
     <option value="material-indigo">Indigo</option>
+    <option value="material-light-blue">Light Blue</option>
     <option value="material-pink">Pink</option>
     <option value="material-purple">Purple</option>
     <option value="material-red">Red</option>
