--- a/src/options.html
+++ b/src/options.html
@@ -17,6 +17,7 @@
     <option value="material-blue">Blue</option>
     <option value="material-cyan">Cyan</option>
     <option value="material-deep-purple">Deep Purple</option>
+    <option value="material-green">Green</option>
     <option value="material-indigo">Indigo</option>
     <option value="material-light-blue">Light Blue</option>
     <option value="material-pink">Pink</option>
