add brown theme

--- a/src/options.html
+++ b/src/options.html
@@ -16,6 +16,7 @@
     <option disabled>──────────</option>
     <option value="material-blue">Blue</option>
     <option value="material-blue-grey">Blue Grey</option>
+    <option value="material-brown">Brown</option>
     <option value="material-cyan">Cyan</option>
     <option value="material-deep-purple">Deep Purple</option>
     <option value="material-green">Green</option>
