add deep orange theme

--- a/src/options.html
+++ b/src/options.html
@@ -18,6 +18,7 @@
     <option value="material-blue-grey">Blue Grey</option>
     <option value="material-brown">Brown</option>
     <option value="material-cyan">Cyan</option>
+    <option value="material-deep-orange">Deep Orange</option>
     <option value="material-deep-purple">Deep Purple</option>
     <option value="material-green">Green</option>
     <option value="material-indigo">Indigo</option>
