--- a/src/popup.html
+++ b/src/popup.html
@@ -25,7 +25,7 @@
     <div class="right-card">
       <h2>Profile</h2>
       <br /><br /><br /><br /><br /><br /><br />
-      <span>Comming soon...</span>
+      <span>Coming soon...</span>
     </div>
   </div>
 
