fix empty name in popup

--- a/src/popup.html
+++ b/src/popup.html
@@ -19,7 +19,7 @@
         <span>People</span>
       </div>
       <div class="clear"></div>
-      <h2 id="name"></h2>
+      <h2 id="name">&nbsp;</h2>
       <span id="birthdate"></span>
     </div>
     <div class="right-card">
