add theme Hunter

--- a/src/options.html
+++ b/src/options.html
@@ -21,6 +21,7 @@
     <option value="material-deep-orange">Deep Orange</option>
     <option value="material-deep-purple">Deep Purple</option>
     <option value="material-green">Green</option>
+    <option value="material-hunter">Hunter</option>
     <option value="material-indigo">Indigo</option>
     <option value="material-light-blue">Light Blue</option>
     <option value="material-pink">Pink</option>
