--- a/src/options.html
+++ b/src/options.html
@@ -23,6 +23,7 @@
     <option value="material-green">Green</option>
     <option value="material-indigo">Indigo</option>
     <option value="material-light-blue">Light Blue</option>
+    <option value="material-marine">Marine</option>
     <option value="material-pink">Pink</option>
     <option value="material-purple">Purple</option>
     <option value="material-red">Red</option>
