add profile links in right card

--- a/src/popup.html
+++ b/src/popup.html
@@ -24,8 +24,24 @@
     </div>
     <div class="right-card">
       <h2>Profile</h2>
-      <br /><br /><br /><br /><br /><br /><br />
-      <span>Coming soon...</span>
+      <br />
+      <br />
+      <img
+        alt="People icon"
+        src="https://www.google.com/s2/favicons?domain=people.epfl.ch"/>
+      <a id="people-epfl" href="" target="_blank"></a>
+      <br />
+      <br />
+      <img
+        alt="Google icon"
+        src="https://www.google.com/s2/favicons?domain=www.google.com"/>
+      <a id="google-search" href="" target="_blank"></a>
+      <br />
+      <br />
+      <img
+        alt="Social Searcher icon"
+        src="https://www.google.com/s2/favicons?domain=www.social-searcher.com"/>
+      <a id="social-search" href="" target="_blank"></a>
     </div>
   </div>
 
